--- a/src/AspNetCore.UnitTest.Api/AspNetCore.UnitTest.Api.csproj
+++ b/src/AspNetCore.UnitTest.Api/AspNetCore.UnitTest.Api.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.79" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
